# ImageEditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UmlDiagrams.mdj
include/Command/: AddLayerCommand.hpp  BlackPointCommand.hpp  BlurCommand.hpp  BrightnessCommand.hpp  ClarityCommand.hpp  ColorInversionCommand.hpp  Command.hpp  ContrastCommand.hpp  EdgeDetectCommand.hpp  EmbossCommand.hpp  ExposureCommand.hpp  FlipCommand.hpp  GrayScaleCommand.hpp  HighlightsCommand.hpp  RotateCommand.hpp  SepiaCommand.hpp  ShadowsCommand.hpp  SharpenCommand.hpp  TemperatureCommand.hpp  TextureCommand.hpp  ToneCurveChangeCommand.hpp
include/Core/: AnalysisOverlay.hpp  Application.hpp  Brush.hpp  Color.hpp  Command.hpp  Document.hpp  Event.hpp  File.hpp  FileManager.hpp  Image.hpp  Layer.hpp  Pixel.hpp  PreviewRenderer.hpp  Processing.hpp  Profiler.hpp  Utils.hpp  Window.hpp
include/Filters/: Blur.hpp  ColorInversion.hpp  EdgeDetection.hpp  Emboss.hpp  Filter.hpp  Sepia.hpp  Sharpen.hpp  Sobel.hpp
include/Math/: Convolution.hpp  FFT.hpp  Gaussian.hpp  Kernel.hpp  Matrix.hpp  Transformation.hpp
include/Tools/: Brush.hpp
include/UI/: ControlPanel.hpp
include/Widget/: Histogram.hpp  ToneCurve.hpp
res/: style.css
src/: main.cpp
src/Core/: Application.cpp  Document.cpp  FileManager.cpp  Image.cpp  Pixel.cpp  PreviewRenderer.cpp  Processing.cpp  Utils.cpp  Window.cpp
src/Filter/: Blur.cpp  ColorInversion.cpp  EdgeDetection.cpp  Emboss.cpp  Sepia.cpp  Sharpen.cpp
src/Math/: Convolution.cpp  Gaussian.cpp
src/UI/: ControlPanel.cpp
src/Widget/: Histogram.cpp  ToneCurve.cpp
